--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 					</div><!-- class: dateText -->
 					<img ng-click="instagram.is_clicked = true" class="video-play" ng-if="instagram.is_video && !instagram.is_clicked" src="images/video-icon.png" />
 					<img ng-src="{{ getImage(instagram.local_image) }}" alt="{{ instagram.caption }}" ng-show="!instagram.is_clicked" />
-					<video ng-if="instagram.is_video && instagram.is_clicked" controls="controls" autoplay name="Video Name" ng-src="{{ getVideo(instagram.local_video) }}"></video>
+					<video ng-if="instagram.is_video && instagram.is_clicked" controls="controls" autoplay poster="{{ getImage(instagram.local_image) }}" name="Video Name" ng-src="{{ getVideo(instagram.local_video) }}"></video>
 <!--					<video ng-show="instagram.is_video" controls><source ng-src="videos/instagram/inst-BF_8_n7G7v_.mp4" type="video/mp4"></video>-->
 					<p>{{ instagram.caption }}</p>
 				</div><!-- class: item -->
