clean up some old files

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 			<div class="project">
 				<div class="projectTitle"><h3>Social Feed</h3></div>
 				<div class="projectDesc">
-					<a href="https://medium.com/@andybarefoot/adding-instagram-photos-to-my-site-with-angularjs-a3eb2a436746#.m70yzvvdb" target="medium-instagram"><img src="images/medium-instagram" /></a>
+					<a href="https://medium.com/@andybarefoot/adding-instagram-photos-to-my-site-with-angularjs-a3eb2a436746#.m70yzvvdb" target="medium-instagram"><img src="images/medium-instagram.png" /></a>
 					<p>I updated the implementation of the social feed on this site to use AngularJS.</p>
 					<p>Due to limitations with the Instagram API I scraped my content directly from the Instagram site and wrote an API in PHP to allow the content to be pulled into the site.</p>
 					<p>I detailed the approach in post on <a href="https://medium.com/@andybarefoot/adding-instagram-photos-to-my-site-with-angularjs-a3eb2a436746#.m70yzvvdb" target="medium-instagram">Medium</a>.</p>
