--- a/index.html
+++ b/index.html
@@ -54,6 +54,16 @@
 				<h2>Personal Projects</h2>
 			</div>
 			<div class="project">
+				<div class="projectTitle"><h3>Valar Morghulis</h3></div>
+				<div class="projectDesc">
+					<a href="/got/" target="got"><img src="images/got-deaths.png" /></a>
+					<p>Fans of Game of Thrones know that Valar Morghulis (all men must die) but when over 200 named characters have already gone to meet The Seven (or The Old Gods, or The Drowned God, or The Lord of Light, or The Many-Faced God of Death, or the Great Stallion, etc...) then it gets hard to keep track of the tragedy.</p>
+					<p>Fortunately Maester Barefoot has created a comprehensive record of all these deaths, whether violent, very violent or extremely violent.</p>
+					<p><a href="/got/" target="_whip">Valar Morghulis</a> shows every death and who was responsibly for the slaying. A kind of "butchery tree" if you like.</p>
+					<p>The data was scraped from the excellent <a href="http://gameofthrones.wikia.com/wiki/Game_of_Thrones_Wiki" target="got-wiki">Game of Thrones wiki</a> and the data representation is implemented using Mike Bostock's marvellous <a href="https://bl.ocks.org/mbostock" target="d3">D3 library</a>.</p>
+				</div>
+			</div>
+			<div class="project">
 				<div class="projectTitle"><h3>MP CoMParison</h3></div>
 				<div class="projectDesc">
 					<a href="/politics/mpcompare/" target="mp-compare"><img src="images/mp-compare.png" /></a>
