--- a/got/index.html
+++ b/got/index.html
@@ -9,110 +9,13 @@
 		<meta property="og:description" content="Fans of Game of Thrones know that Valar Morghulis (all men must die) but when over 200 named characters have already gone to meet The Seven (or The Old Gods, or The Drowned God, or The Lord of Light, or The Many-Faced God of Death, or the Great Stallion, etc...) then it gets hard to keep track of the tragedy. Fortunately Maester Barefoot has created a comprehensive record of all these deaths, whether violent, very violent or extremely violent." />
 		<meta property="og:image" content="http://www.andybarefoot.com/got/images/fb-got-deaths.png" />
 
-		<link href="https://fonts.googleapis.com/css?family=Martel:200" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Trirong:100,200" rel="stylesheet">
 
 		<script src="/jscript/d3.v4.min.js"></script>
 		<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-
-		<style>
-			body {
-				background-color: #1f1f1f;
-				color: #808080;
-				font-family: 'Trirong', georgia, times, serif;
-				font-weight: 200;
-				font-size: 18px;
-			}
-
-			a {
-				color: #808080;
-			}
-
-			h1 {
-				font-size: 25px;
-				margin: 0 0 0 32px;
-				font-weight: 100;
-			}
-
-			p {
-				margin: 0 0 0 32px;
-			}
-
-			.node circle {
-			  fill: #caad2d;
-			}
-
-			.node text {
-				font-size: 16px;
-				font-family: 'Trirong', georgia, times, serif;
-				fill: #808080;
-			}
-
-			.node--internal circle {
-			  fill: #caad2d;
-			}
-
-			.node--internal text-xxx {
-			  text-shadow: 0 1px 0 #fff, 0 -1px 0 #fff, 1px 0 0 #fff, -1px 0 0 #fff;
-			}
-
-			.link {
-			  fill: none;
-			  stroke: #caad2d;
-			  stroke-opacity: 0.4;
-			  stroke-width: 1.0px;
-			}
-
-			#popup {
-				display: none;
-				position: absolute;
-				color: #808080;
-				background-color: #121212;
-				border-style: solid;
-				border-width: 1px;
-				border-color: #caad2d;
-				width: 400px;
-				height: 220px;
-				top:0; 
-				left:0;
-			}
-			h2 .charLink{
-				text-decoration: none;
-			}
-			#close {
-				position: absolute;
-				bottom:0; 
-				right:10px;
-				color: #caad2d;
-			}
-			#close a{
-				color: #caad2d;
-			}
-			#popup #imgHolder {
-				width: 150px;
-				height: 200px;
-				float: left;
-				margin: 10px;
-				overflow: hidden;
-			}
-			#popup img {
-				max-width: 100%;
-			}
-
-			#popup h2 {
-				font-size: 22px;
-				line-height: 24px;
-				font-weight: 100;
-				margin: 7px 10px 0 0;
-			}
-
-			#popup p {
-				font-size: 16px;
-				margin: 0 10px 0 0;
-				line-height: 18px;
-			}
-		</style>
-    </head>
+		<link rel="stylesheet" href="../css/reset.css">
+		<link rel="stylesheet" href="deaths.css">
+   </head>
 	<body>
 		<div id="popup">
 			<div id="imgHolder">
@@ -125,13 +28,18 @@
 			</div>
 		</div>
 
-		<img src="images/valar-morghulis.png" />
+		<img id="titleImg" src="../../got/images/valar-morghulis.png" alt="Valar Morghulis: All men must die" />
 		<h1>A guide to who has killed who in Game of Thrones</h1>
+		<p>In Game of Thrones  it's true that "Valar Morghulis" but when over 200 characters have already gone to meet The Seven (or The Old Gods, or The Drowned God, or The Many-Faced God, or The Lord of Light, or the Great Stallion, or the Black Goat) then it gets hard to keep track of the tragedy.</p>
+		<p>Fortunately <a href="http://www.andybarefoot.com">Maester Barefoot</a> has been documenting the deceased and below you will find the results of his labour. A kind of "butchery tree" if you like, showing every death whether violent, very violent or extremely violent.</p>
 		<p>All data and images from the excellent <a href="http://gameofthrones.wikia.com/wiki/Game_of_Thrones_Wiki" target="_blank">Game of Thrones wiki</a>.</p>
 
-		<svg id="mySVG" width="1000" height="8000"></svg>
-
 		<script>
+			// ESTABLISH PARAMETERS
+			w = 1600; // chart width
+			h = 14500; // chart height
+			charCount = 0; // RUNNING COUNT OF CHARACTERS
+
 			// MANAGE CHARACTER OVERLAY
 			var popUpClicked = 0;
 
@@ -147,7 +55,6 @@
 			}
 
 			function closePopup(){
-				console.log("close");
 				$("#popup").hide();
 				popUpClicked=0;
 			}
@@ -177,10 +84,12 @@
 				}
 				xPos = trans.left + 30;
 				yPos = trans.top + 30;
-				if((xPos + 430) > 1000)xPos = xPos-440;
-				if((yPos) > 8000)yPos = yPos-260;
+//				if((xPos + 430) > w)xPos = xPos-440;
+				while((xPos + 430) > w)xPos-=10;
+
+				if((yPos) > h)yPos = yPos-260;
 				if(charData[0]['charThumb']!=""){
-					imgSrc = "images/char"+charData[0]['charID']+".png";
+					imgSrc = "../../got/images/char"+charData[0]['charID']+".png";
 				}else{
 					imgSrc = "";
 				}
@@ -202,65 +111,198 @@
 
 			charJson = JSON.parse(charStr)
 
-			// MANAGE CHART
-			var svg = d3.select("svg"),
-			    width = +svg.attr("width"),
-			    height = +svg.attr("height"),
-			    g = svg.append("g").attr("transform", "translate(40,0)");
+			function drawChart(){
+				w = $( window ).width();
+				xOff = 50; // horizontal offset
+				yOff = 50; // vertical offset
+				vertSpacing = 50; // vert spacing between characters
+				vertOffset = 50; // vert offset from chart top to first character
+				totalSeasons = 6;
+				episodesPerSeason = 10;
+				epiWidth = 20; // episode width
+				epiWidth = (w - (2*xOff))/(totalSeasons*episodesPerSeason); // episode width
 
-			var tree = d3.tree()
-			    .size([height, width - 220]);
+				$("svg").remove();
+				// CREATE CHART
+				// CREATE SVG
+				var svg = d3.select("body")
+	            .append("svg")
+	            .attr("width", w)
+	            .attr("height", h);
 
-			var stratify = d3.stratify()
-			    .parentId(function(d) { return d.id.substring(0, d.id.lastIndexOf(".")); });
+				svg.append("rect")
+				   .attr("x", 0)
+				   .attr("y", 0)
+				   .attr("width", w)
+				   .attr("height", h)
+				   .attr("fill", "#1f1f1f")
+				   ;
 
-			d3.csv("deaths.csv", function(error, data) {
-			  if (error) throw error;
+				// ADD SEASON TITLES & BACKGROUNDS
+				for (var i = 0; i < totalSeasons; ++i) {
+					svg.append("text")
+						.attr("x", xOff + i*episodesPerSeason*epiWidth + 5*epiWidth)
+						.attr("y", yOff)
+						.attr("dy", -5)
+						.attr("class", "season")
+						.style("text-anchor", "middle")
+						.text("Season "+(totalSeasons-i))
+						;
+					if((i/2)==Math.floor(i/2)){
+						svg.append("rect")
+						   .attr("x", xOff + i*episodesPerSeason*epiWidth)
+						   .attr("y", yOff)
+						   .attr("width", episodesPerSeason*epiWidth)
+						   .attr("height", h-yOff)
+						   .attr("fill", "#1c1c1c")
+						   ;
+					}
+					// ADD EPISODE KEYLINES
+					for (var j = 1; j < episodesPerSeason; ++j) {
+						svg.append("line")
+						   .attr("x1", xOff + i*episodesPerSeason*epiWidth + j*epiWidth)
+						   .attr("y1", yOff)
+						   .attr("x2", xOff + i*episodesPerSeason*epiWidth + j*epiWidth)
+						   .attr("y2", h)
+						   .attr("stroke-width", 1)
+						   .attr("stroke", "#292929")
+						   ;
+					}
+				}
 
-			  var root = stratify(data)
-			      .sort(function(a, b) { return (a.height - b.height) || a.id.localeCompare(b.id); });
-			  tree(root);
+				var svg = d3.select("svg"),
+				    g = svg.append("g");
+				var tree = d3.tree()
+				var stratify = d3.stratify()
+				    .parentId(function(d) { return d.id.substring(0, d.id.lastIndexOf(".")); });
 
-			  var link = g.selectAll(".link")
-			      .data(root.descendants().slice(1))
-			    .enter().append("path")
-			      .attr("class", "link")
-			      .attr("d", function(d) {
-			        return "M" + d.y + "," + d.x
-			            + "C" + (d.y + d.parent.y) / 2 + "," + d.x
-			            + " " + (d.y + d.parent.y) / 2 + "," + d.parent.x
-			            + " " + d.parent.y + "," + d.parent.x;
-			      });
 
-			  var node = g.selectAll(".node")
-			      .data(root.descendants())
-			    .enter().append("g")
-			      .attr("class", function(d) { return "node" + (d.children ? " node--internal" : " node--leaf"); })
-			      .attr("transform", function(d) { return "translate(" + d.y + "," + d.x + ")"; })
-			      .attr("id", function(d) { return "id" + d.data.value; })
-
-			  node.append("circle")
-					.attr("r", 5)
-					.attr("data-id", function(d) { return d.data.value; })
-					.on("click", function(d) {
-						clickPopup(d3.select(this).attr("data-id"),$(this).position());
-					})
-					.on("mouseover", function(d) {
-						d3.select(this).attr("r", 10)
-						mouseOverPopup(d3.select(this).attr("data-id"),$(this).position());
-					})
-					.on("mouseout", function() {
-						d3.select(this).attr("r", 5)
-						mouseOutPopup(d3.select(this).attr("data-id"),$(this).position());
+				// RECURSIVE FUNCTION FOR HANDLING CHILD ARRAYS AND SETTING VERTICAL POSITION
+				function spaceNodes(nodeChildren){
+					// SORT ARRAY BY EPISODE ASC
+					nodeChildren.sort(function (a, b) {
+						if ((10*a.data.deathSeason)+a.data.deathEpisode > (10*b.data.deathSeason)+b.data.deathEpisode) {
+							return 1;
+						}
+						if ((10*a.data.deathSeason)+a.data.deathEpisode < (10*b.data.deathSeason)+b.data.deathEpisode) {
+							return -1;
+						}
+					  return 0;
 					});
+					//  SET VERT POSITION
+					for (var i = 0; i < nodeChildren.length; ++i) {
+						nodeChildren[i].x = yOff + vertOffset + vertSpacing*charCount;
+						charCount++;
+						if(nodeChildren[i].children){
+							spaceNodes(nodeChildren[i].children);
+						}
+					}
+				}
 
-			  node.append("text")
-			      .attr("dy", 5)
-			      .attr("x", function(d) { return d.children ? -15 : 15; })
-			      .style("text-anchor", function(d) { return d.children ? "end" : "start"; })
-			      .text(function(d) { return d.id.substring(d.id.lastIndexOf(".") + 1); });
-			});
+				d3.csv("../../got/deaths.csv", function(error, data) {
+					charCount = 0;
+					if (error) throw error;
+					var root = stratify(data)
+						.sort(function(a, b) { return (b.height - a.height) || a.id.localeCompare(b.id); })
+						;
+					tree(root);
+					root.x = yOff + vertOffset;
+					spaceNodes(root.children);
+					for (i = 0; i < root.descendants().slice(1).length; ++i) {
+						season = parseInt(root.descendants().slice(1)[i].data.deathSeason);
+						episode = parseInt(root.descendants().slice(1)[i].data.deathEpisode);
+						if(season=="")season=0;
+						if(episode=="")episode=0;
+						episodeNo = (10*(season-1))+episode;
+						if(episodeNo<0)episodeNo=0;
+						seasonParent = parseInt(root.descendants().slice(1)[i].parent.data.deathSeason);
+						episodeParent = parseInt(root.descendants().slice(1)[i].parent.data.deathEpisode);
+						if(seasonParent=="")seasonParent=0;
+						if(episodeParent=="")episodeParent=0;
+						episodeParent = (10*(seasonParent-1))+episodeParent;
+						dead = parseInt(root.descendants().slice(1)[i].data.dead);
+						if(dead==0){
+							root.descendants().slice(1)[i].y = xOff - 25;
+						} else if(episodeNo==0){
+							root.descendants().slice(1)[i].y = xOff + 25 + (totalSeasons*episodesPerSeason*epiWidth);
+						} else {
+							root.descendants().slice(1)[i].y =  xOff + ((totalSeasons*episodesPerSeason - episodeNo) * epiWidth) +epiWidth/2;
+							if(episodeNo == episodeParent){
+								root.descendants().slice(1)[i].y+=epiWidth/4;
+								root.descendants().slice(1)[i].parent.y = xOff + ((totalSeasons*episodesPerSeason - episodeParent) * epiWidth) + epiWidth/4;
+							}
+						}
+					}
+					var link = g.selectAll(".link")
+				      .data(root.descendants().slice(1))
+				    .enter().append("path")
+				      .attr("class", "link")
+				      .attr("d", function(d) {
+				        return "M" + d.y + "," + d.x
+				            + "C" + (d.y + d.parent.y) / 2 + "," + d.x
+				            + " " + (d.y + d.parent.y) / 2 + "," + d.parent.x
+				            + " " + d.parent.y + "," + d.parent.x;
+				      })
+			    	.attr("stroke", function(d) { return (d.parent.parent ? "#caad2d" : "none"); })
+			      ;
 
+				  var node = g.selectAll(".node")
+				      .data(root.descendants())
+				    .enter().append("g")
+				      .attr("class", function(d) { return "node" + (d.children ? " node--internal" : " node--leaf"); })
+				      .attr("transform", function(d) { return "translate(" + d.y + "," + d.x + ")"; })
+				      .attr("id", function(d) { return "id" + d.data.value; })
+				  node.append("circle")
+						.attr("r", 5)
+						.attr("data-id", function(d) { return d.data.value; })
+				    	.attr("fill", function(d) { return (d.parent ? "#caad2d" : "none"); })
+						.on("click", function(d) {
+							clickPopup(d3.select(this).attr("data-id"),$(this).position());
+						})
+						.on("mouseover", function(d) {
+							d3.select(this).attr("r", 10)
+							mouseOverPopup(d3.select(this).attr("data-id"),$(this).position());
+						})
+						.on("mouseout", function() {
+							d3.select(this).attr("r", 5)
+							mouseOutPopup(d3.select(this).attr("data-id"),$(this).position());
+						});
+				  node.append("text")
+				      .text(function(d) { return d.id.substring(d.id.lastIndexOf(".") + 1); })
+				      .attr("dx", 10)
+				      .attr("dy", -5)
+				      .style("text-anchor", "start")
+				      ;
+					var text = node.selectAll("text")
+						.style("text-anchor", function(d,i) {
+							if((d.y + this.getBBox().width + 20)>w){
+								return "end"; 
+							}else{
+								return "start"; 
+							}	
+						})
+						.attr("dx", function(d,i) {
+							if((d.y + this.getBBox().width + 20)>w){
+								return -10; 
+							}else{
+								return 10; 
+							}	
+						})
+						.attr("dy", function(d,i) {
+							if((d.y + this.getBBox().width + 20)>w){
+								return 15; 
+							}else{
+								return -5; 
+							}	
+						})
+						;
+					h =  yOff + vertOffset + (charCount*vertSpacing);
+					svg.attr("height", h);
+				});
+			}
+
+			$(window).resize(drawChart);
+			$( document ).ready(drawChart);
 		</script>
 	</body>
 </html>
