--- a/got/index.html
+++ b/got/index.html
@@ -102,6 +102,28 @@
 				$(".charLink").attr('href',charData[0]['charURL']);
 			}
 
+			// RECURSIVE FUNCTION FOR HANDLING CHILD ARRAYS AND SETTING VERTICAL POSITION
+			function spaceNodes(nodeChildren){
+				// SORT ARRAY BY EPISODE ASC
+				nodeChildren.sort(function (a, b) {
+					if ((10*a.data.deathSeason)+a.data.deathEpisode > (10*b.data.deathSeason)+b.data.deathEpisode) {
+						return 1;
+					}
+					if ((10*a.data.deathSeason)+a.data.deathEpisode < (10*b.data.deathSeason)+b.data.deathEpisode) {
+						return -1;
+					}
+				  return 0;
+				});
+				//  SET VERT POSITION
+				for (var i = 0; i < nodeChildren.length; ++i) {
+					nodeChildren[i].x = yOff + vertOffset + vertSpacing*charCount;
+					charCount++;
+					if(nodeChildren[i].children){
+						spaceNodes(nodeChildren[i].children);
+					}
+				}
+			}
+
 			// IMPORT DATA
 			var charStr = $.ajax({
 				url: "characters.json",
@@ -170,34 +192,11 @@
 					}
 				}
 
-				var svg = d3.select("svg"),
-				    g = svg.append("g");
+				var g = svg.append("g");
 				var tree = d3.tree()
 				var stratify = d3.stratify()
 				    .parentId(function(d) { return d.id.substring(0, d.id.lastIndexOf(".")); });
 
-
-				// RECURSIVE FUNCTION FOR HANDLING CHILD ARRAYS AND SETTING VERTICAL POSITION
-				function spaceNodes(nodeChildren){
-					// SORT ARRAY BY EPISODE ASC
-					nodeChildren.sort(function (a, b) {
-						if ((10*a.data.deathSeason)+a.data.deathEpisode > (10*b.data.deathSeason)+b.data.deathEpisode) {
-							return 1;
-						}
-						if ((10*a.data.deathSeason)+a.data.deathEpisode < (10*b.data.deathSeason)+b.data.deathEpisode) {
-							return -1;
-						}
-					  return 0;
-					});
-					//  SET VERT POSITION
-					for (var i = 0; i < nodeChildren.length; ++i) {
-						nodeChildren[i].x = yOff + vertOffset + vertSpacing*charCount;
-						charCount++;
-						if(nodeChildren[i].children){
-							spaceNodes(nodeChildren[i].children);
-						}
-					}
-				}
 
 				d3.csv("../../got/deaths.csv", function(error, data) {
 					charCount = 0;
@@ -253,27 +252,28 @@
 				      .attr("transform", function(d) { return "translate(" + d.y + "," + d.x + ")"; })
 				      .attr("id", function(d) { return "id" + d.data.value; })
 				  node.append("circle")
-						.attr("r", 5)
+						.attr("r", function(d) {
+							return  2+(10*Math.sqrt(d.data.appearances/(totalSeasons * episodesPerSeason)));
+						})
 						.attr("data-id", function(d) { return d.data.value; })
 				    	.attr("fill", function(d) { return (d.parent ? "#caad2d" : "none"); })
 						.on("click", function(d) {
 							clickPopup(d3.select(this).attr("data-id"),$(this).position());
 						})
 						.on("mouseover", function(d) {
-							d3.select(this).attr("r", 10)
+//							d3.select(this).attr("r", 10)
 							mouseOverPopup(d3.select(this).attr("data-id"),$(this).position());
 						})
 						.on("mouseout", function() {
-							d3.select(this).attr("r", 5)
+//							d3.select(this).attr("r", 5)
 							mouseOutPopup(d3.select(this).attr("data-id"),$(this).position());
-						});
-				  node.append("text")
-				      .text(function(d) { return d.id.substring(d.id.lastIndexOf(".") + 1); })
-				      .attr("dx", 10)
-				      .attr("dy", -5)
-				      .style("text-anchor", "start")
-				      ;
-					var text = node.selectAll("text")
+						})
+						;
+					node.append("text")
+						.text(function(d) { return d.id.substring(d.id.lastIndexOf(".") + 1); })
+						.style("text-anchor", "start")
+					;
+					node.selectAll("text")
 						.style("text-anchor", function(d,i) {
 							if((d.y + this.getBBox().width + 20)>w){
 								return "end"; 
@@ -282,10 +282,11 @@
 							}	
 						})
 						.attr("dx", function(d,i) {
+							spacing = 3+(10*d.data.appearances/(totalSeasons * episodesPerSeason));
 							if((d.y + this.getBBox().width + 20)>w){
-								return -10; 
+								return 0-spacing; 
 							}else{
-								return 10; 
+								return spacing; 
 							}	
 						})
 						.attr("dy", function(d,i) {
