--- a/index.html
+++ b/index.html
@@ -54,6 +54,16 @@
 				<h2>Personal Projects</h2>
 			</div>
 			<div class="project">
+				<div class="projectTitle"><h3>The Cocktail Menu</h3></div>
+				<div class="projectDesc">
+					<a href="/cocktails/" target="cocktails"><img src="images/cocktails.png" /></a>
+					<p>An exercise in using D3.js and SVG to create <a href="/cocktails/" target="cocktails">data visualisations of cocktails</a> and their ingredients.</p>
+					<p>Inspired by this <a href="http://www.informationisbeautiful.net/visualizations/cocktails/" target="_blank">original visualisation</a> by Tatjana Dubovina & David McCandless I wanted to make an entirely dynamically generated version.</p>
+					<p>The data was taken from <a href="https://en.wikipedia.org/wiki/List_of_cocktails" target="_blank">Wikipedia</a> and is served in JSON from a MySQL database.</p>
+					<p>Each visualisation is generated programmatically from the data, including the drawing of the glass outline to create a <a href="/cocktails/" target="cocktails">menu of over 70 cocktails</a>.</p>
+				</div>
+			</div>
+			<div class="project">
 				<div class="projectTitle"><h3>Valar Morghulis</h3></div>
 				<div class="projectDesc">
 					<a href="/got/" target="got"><img src="images/got-deaths.png" /></a>
