--- a/olympics/index.html
+++ b/olympics/index.html
@@ -36,7 +36,7 @@ function getColour(cont){
     }else if(cont==colours[6][1]){
         return colours[6][0];
     }else {
-        return colours[0];
+        return colours[0][0];
     }
 }
 
@@ -52,7 +52,7 @@ var dataFiles = [
 ]
 
 var colours = [
-  ["#CDDC39",""], // Lime
+  ["#8BC34A",""], // Light Green
   ["#673AB7","Africa"], // Deep Purple
   ["#E91E63","Asia"], // Pink
   ["#03A9F4","Europe"], // Light Blue
