--- a/olympics/index.html
+++ b/olympics/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="olympics.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script src="//d3js.org/d3.v3.min.js"></script>
+    <script src="/jscript/d3.v3.min.js"></script>
     </head>
     <body>
         <h1>Olympics 2016</h1>
