--- a/olympics/golds.html
+++ b/olympics/golds.html
@@ -3,7 +3,7 @@
   <head>
     <title>Olympics 2016: Some key numbers</title>
     <meta charset="utf-8">
-    <meta property="og:url" content="http://www.andybarefoot.com/olympics/" />
+    <meta property="og:url" content="http://www.andybarefoot.com/olympics/golds.html" />
     <meta property="og:title" content="Olympics 2016: Gold Medals Awarded" />
     <meta property="og:description" content="Data visualisation of all gold medals awarded during the Summer Olympics 2016." />
     <meta property="og:image" content="http://www.andybarefoot.com/olympics/images/fb-golds.png" />
